Update Makefile to set the correct cross compiler prefix and adjust compiler flags for riscv32 architecture

--- a/08-process/Makefile
+++ b/08-process/Makefile
@@ -3,9 +3,9 @@ QEMU=qemu-system-riscv32
 # cross compiler prefix
 
 # GNU-Linux
-# PREFIX = riscv64-linux-gnu-
+PREFIX = riscv64-linux-gnu-
 # for macos
-PREFIX = riscv64-unknown-elf-
+# PREFIX = riscv64-unknown-elf-
 
 CC = $(PREFIX)gcc
 OBJDUMP = $(PREFIX)objdump
