--- a/08-process/user/Makefile
+++ b/08-process/user/Makefile
@@ -1,9 +1,9 @@
 # cross compiler prefix
 
 # GNU-Linux
-# PREFIX = riscv64-linux-gnu-
+PREFIX = riscv64-linux-gnu-
 # for macos
-PREFIX = riscv64-unknown-elf-
+# PREFIX = riscv64-unknown-elf-
 
 CC = $(PREFIX)gcc
 OBJDUMP = $(PREFIX)objdump
@@ -11,7 +11,7 @@ OBJCOPY = $(PREFIX)objcopy
 
 # Compiler flags for compiling to riscv32 architecture standalone program (no
 # runtime and standard library)
-CFLAGS= -O -Wall -Wextra -MD -mcmodel=medany -march=rv32ima -mabi=ilp32 \
+CFLAGS= -O -Wall -Wextra -MD -mcmodel=medany -march=rv32imazicsr -mabi=ilp32 \
         -ffreestanding -nostdlib -fno-common -fno-omit-frame-pointer \
 		-fno-stack-protector -nostartfiles
 
